@@ -14,7 +14,7 @@
  * @ingroup views_templates
  */
 ?>
-<div class="views-fluid-grid-wrapper">
+<div class="views-fluid-grid">
   <?php if (!empty($title)) : ?>
     <h3><?php print $title; ?></h3>
   <?php endif; ?>
